--- a/themeforest-WcZGTF7k-marina-hotel-resort-wordpress-theme-wordpress-theme/marina/style.css
+++ b/themeforest-WcZGTF7k-marina-hotel-resort-wordpress-theme-wordpress-theme/marina/style.css
@@ -300,10 +300,11 @@ body{
 }
 
 /* 1.2 container */
-.nicdark_container{ 
-    width:1350px; 
-    margin:auto; 
-    padding: 0px; 
+.nicdark_container{
+    width: 100%;
+    max-width: 1350px;
+    margin:auto;
+    padding: 0 20px;
 }
 
 .nicdark_clearfix:after { 
@@ -4145,9 +4146,10 @@ iframe#twitter-widget-0{
 
 /* 11.1 ipad land*/
 @media only screen and (min-width: 960px) and (max-width: 1349px) {
-    
+
     .nicdark_container{
-        width:960px;
+        max-width: 1200px;
+        padding: 0 24px;
     }
 
     .nicdark_grid_1,
@@ -4169,9 +4171,10 @@ iframe#twitter-widget-0{
 
 /* 11.2 ipad port*/
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-    
+
     .nicdark_container {
-        width:748px;
+        max-width: 960px;
+        padding: 0 24px;
     }
 
     .nicdark_width_100_percentage_ipad_port { 
@@ -4203,7 +4206,8 @@ iframe#twitter-widget-0{
     }
 
     .nicdark_container {
-        width:460px;
+        max-width: 620px;
+        padding: 0 18px;
     }
 
     .nicdark_grid_1,
@@ -4230,8 +4234,9 @@ iframe#twitter-widget-0{
         -webkit-text-size-adjust:none; 
     }
 
-    .nicdark_container{ 
-        width:320px;
+    .nicdark_container{
+        max-width: 440px;
+        padding: 0 14px;
     }
 
     .nicdark_width_100_percentage_iphone_port { 
